# TrajectoryArtPub

./: ChangeLog  LICENSE  README.md
Doc/: Tutorial1.ipynb
TrajectoryArt/Example/: CMakeLists.txt  PlotTraj.py  PyTrajectoryArt.pyi  README.md  TrajectoryArtWizardApp.cpp  UseTrajectoryArt.cpp  UseTrajectoryArt.py  WaypointsCartesian.txt  WaypointsJoint.txt  WaypointsJoint2D.txt
TrajectoryArt/include/TA/: TrajectoryArt.h  TrajectoryArtWizard.h
TrajectoryArt/lib/cmake/: TrajectoryArtConfig-release.cmake  TrajectoryArtConfig.cmake
